--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -41,7 +41,7 @@ http://ionicframework.com/docs/theming/ */
   font-size: 1.4em;
 }
 
-ion-list-header.md {
+/* ion-list-header.md {
   font-weight: bold;
   font-size: 1.1rem;
-}
+} */
