--- a/src/theme/md3/ionic/list.css
+++ b/src/theme/md3/ionic/list.css
@@ -18,6 +18,7 @@
   }
   ion-item:last-child {
     border-radius: 0 0 12px 12px;
+    --inner-border-width: 0;
   }
   ion-item:only-child {
     border-radius: 12px;
@@ -31,7 +32,7 @@
   ion-item {
     --background: var(--md-sys-surface-variant);
     --color: var(--md-sys-on-surface);
-    --border-color: var(--md-sys-surface);
+    --border-color: var(--md-sys-outline-variant);
 
     font: var(--md-sys-body-large);
     letter-spacing: var(--md-sys-body-large-letter-spacing);
