--- a/src/theme/md3/ionic/card.css
+++ b/src/theme/md3/ionic/card.css
@@ -7,6 +7,7 @@
     --color: var(--md-sys-on-surface);
     /* box-shadow: var(--md-sys-level1); */
     border-radius: 12px;
+    margin: 12px 0;
   }
 
   ion-card.md-filled,
