--- a/src/theme/md3/ionic/list.css
+++ b/src/theme/md3/ionic/list.css
@@ -32,8 +32,10 @@
   ion-item {
     --background: var(--md-sys-surface-variant);
     --color: var(--md-sys-on-surface);
-    --border-color: var(--md-sys-outline-variant);
-
+    --border-color: rgba(0, 0, 0, 0);
+    --border-radius: 4px;
+    margin-top: 2px;
+    border: none;
     font: var(--md-sys-body-large);
     letter-spacing: var(--md-sys-body-large-letter-spacing);
 
